--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.13.0",
+    "@types/tailwindcss": "^3.1.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.19"
