--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "vue": "^3.4.21",
+    "vue-flip": "^3.0.2",
     "vue-router": "^4.3.2",
     "vuedraggable": "^4.1.0"
   },
