--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
     "vue": "^3.4.21",
     "vue-flip": "^3.0.2",
     "vue-router": "^4.3.2",
