--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.37",
     "@types/express": "^4.17.21",
     "@types/node": "^22.3.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.9.0",
     "express": "^4.19.2",
     "lsof": "^0.1.0",
+    "microdiff": "^1.4.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
