--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
+    "pinia": "^2.2.2",
     "sequelize": "^6.37.3",
     "vue": "^3.4.21",
     "vue-flip": "^3.0.2",
